# etl_az

./: README.md  main.py  pyproject.toml
data/: producaoervamate.parquet
docs/: report.pbix
etl_az/: connect.py  download.py  draft.py  extract.py  settings.py  transform_gold.py  transform_silver.py  upload.py  utils.py
